...
          padding: const EdgeInsets.symmetric(horizontal: 20, vertical: 12),
          child: Column(
            mainAxisAlignment: MainAxisAlignment.spaceEvenly,
            children: [
              // Title
              const Text(
                'Welcome to Mentor Mentee',
                style: TextStyle(
                  color: Color(0xFF3F2C2C),
                  fontSize: 24,
                  fontWeight: FontWeight.bold,
                ),
              ),
...
